--- a/front/src/App.css
+++ b/front/src/App.css
@@ -8,8 +8,19 @@
 
 .global_container {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.global_container > div {
-  box-shadow: 0 0 0 0.200rem rgba(0, 0, 0, 1);
+.case_header {
+  display: flex;
+  align-items: center;
+}
+
+.case_item {
+  margin: 0.5rem;
+}
+
+.place_container > div {
+  margin: 1rem;
 }
